# AgentBus

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: android-release.yml  release.yml  route-agent-bus.yml  validate-agent-bus.yml
agent_bus/: README.md
agent_bus/archive/: README.md
agent_bus/config/: README.md  agents.yaml
agent_bus/docs/: ANDROID_TERMUX.md  DESIGN_V1.md  LIFECYCLE.md  MEMORY_LAYER.md  OPENCLAW_BRIDGE.md  OPERATING_RULES.md  README.md  ROUTING_MODEL.md
agent_bus/inbox/android/: README.md
agent_bus/inbox/codex/: README.md
agent_bus/inbox/openclaw/: README.md  TRACE-20260326-001.md  TRACE-20260326-002.md
agent_bus/results/_routing/: README.md
agent_bus/results/android/: README.md
agent_bus/results/codex/: README.md
agent_bus/results/openclaw/: README.md  RESULT-20260326-001.md
agent_bus/tasks/android/: README.md
agent_bus/tasks/codex/: README.md
agent_bus/templates/: INBOX_TEMPLATE.md  MEMORY_TEMPLATE.md  RESULT_TEMPLATE.md  TASK_TEMPLATE.md
agentbus/: __main__.py  agents.py  bridge.py  cli.py  frontmatter.py  inbox.py  lifecycle.py  memory.py  models.py  repo.py  routing.py  validator.py  worker.py
android-app/: README.md  TUTORIAL.md  gradle.properties  settings.gradle.kts  signing.properties.example
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/gradle/: libs.versions.toml
scripts/: android_install.ps1  termux_handler.py  verify_android_release.ps1
tests/: test_frontmatter.py  test_lifecycle.py  test_memory.py  test_routing.py
(+13 files in other folders)
